--- a/src/components/header.css
+++ b/src/components/header.css
@@ -6,8 +6,9 @@
 
 
 .header {
-  background: white;
+  background: #3298dc;
   padding: 10px 0;
+  color:white;
   z-index: 100;
   position: fixed;
   width: 100%;
@@ -33,6 +34,7 @@
           font-size: 16px; }
         .header .header-wrap .left .content .title {
           font-size: 24px;
+          color:white;
           padding:10px;
           font-weight: 700;
         }
@@ -114,6 +116,7 @@
 @media only screen and (max-width: 800px) {
   .header {
     padding: 0;
+    background: #3298dc;
     border-bottom: none;
     background: none;
     box-shadow: none; }
@@ -122,7 +125,7 @@
       flex-flow: column; }
       .header .header-wrap .left {
         padding: 0 5px;
-        background: white;
+        background: #3298dc;
         width: 100%;
         padding-bottom: 5px;
         box-shadow: 0 2px 10px rgba(0, 0, 0, 0.15);
